Projet GL/Projet_GL/src/test/deca/codegen/valid/created/incr4/assign-null-simple.deca
//

class A{}

{
    A a = new A();
    a = null;
}