Projet GL/Projet_GL/src/test/deca/codegen/invalid/created/ima/null-deference.deca
class A{
    protected int x;
    int getX(){
        return this.x;
    }
}

{
    A a;
    a.getX();
}